# F1Whisper-desktop

./: .eslintignore  .eslintrc.cjs  .gitattributes  .gitignore  .gitlab-ci.yml  .mocharc.jsonc  .npmrc  .nycrc.karma.json  .prettierignore  .prettierrc.yml  AGENTS.md  LICENSE-3RD-PARTY.txt  README.md  contributors.csv  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  turbo.json  turbo.jsonc
.devcontainer/: Dockerfile  devcontainer.json  env.sh  initialize.sh  start.sh  sway.conf
.github/workflows/: release.yml
.gitlab/merge_request_templates/: DEFAULT.md
.licenses/: opensans
apps/conferencing/: .gitignore  eslint.config.mjs  index.html  package.json  playwright.config.ts  tsconfig.json  turbo.json  vite.config.ts  vitest.config.ts
apps/desktop/: .gitignore  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tsconfig.json  turbo.json
apps/desktop/src/rust/common/: Cargo.toml  rust-toolchain.toml
apps/desktop/src/rust/common/src/util/: mod.rs
config/: base.js  custom-config.mjs  karma.cjs  svelte.config.js  vite.config.ts
config/vite-plugins/: cjs-externals.ts  subresource-integrity.ts  ts-worker.ts
containers/buildah/: Dockerfile  unqualified-search.conf
containers/libthreema/: Dockerfile
containers/mdbook/: Dockerfile
containers/node-browsers/: Dockerfile
docs/: .gitignore  book.toml
docs/src/: SUMMARY.md  architecture.md  dependencies.md  desktop.md  emojis.md  general-guidelines.md  generated.md  helper-binary.md  launcher-binary.md  libthreema-update.md  libthreema.md  screenshots.md  testing-coverage.md  testing-playwright.md  ui-components.md
libs/libthreema/: Cargo.toml  rust-toolchain.toml
libs/libthreema/macros/: Cargo.toml
libs/libthreema/macros/src/: lib.rs
libs/libthreema/macros/tests/: concat_bytes.rs
packaging/: main.ts  tsconfig.json
packaging/flatpak/: README.md  manifest-template.yml
packaging/metadata/: ch.threema.threema-desktop.metainfo.xml
src/: index.html  screenshare.html  tsconfig.base.json
src/app/: app.ts  types.ts
src/cli/: bin.ts  services.ts
src/common/: backend.ts  background-job-scheduler.ts  config.ts  device.ts  electron-ipc.ts  electron-service.ts  enum.ts  file-storage.ts  key-storage.ts  media.ts  notification.ts  remote-secret.ts  system-dialog.ts  types.ts  vite-client.d.ts
src/electron/: electron-main.ts  (+4 more)
src/rust/common/: Cargo.toml  README.md  rust-toolchain.toml
src/rust/common/src/: lib.rs
src/rust/common/src/ipc/: message.rs
src/rust/common/src/util/: constants.rs  macos.rs
src/rust/helper/: Cargo.toml  launchd.plist  rust-toolchain.toml
src/rust/helper/.cargo/: config.toml
src/rust/helper/src/: main.rs
src/rust/helper/src/util/: constants.rs  fs.rs  launchd.rs  mod.rs  security.rs
src/rust/launcher/: Cargo.toml  rust-toolchain.toml
src/rust/launcher/.cargo/: config.toml
src/rust/launcher/src/: main.rs
src/rust/launcher/src/update/: macos.rs
src/rust/launcher/src/util/: constants.rs
tools/: build-electron.cjs  build-libthreema-wasm.sh  convert-screenshot-data.py  copy-and-build-libthreema.sh  custom-build-utils.mjs  dev-electron.sh  dist-electron.cjs  gather-licenses.sh  generate-custom-builds.mjs  generate-icons-macos-custom.sh  generate-icons-web-custom.sh  generate-icons-windows.sh  generate-protobuf.sh  macos-style-screenshots.py  run-tests.cjs  run-with-vite.mjs
(+1577 files in other folders)
