[package]
name = "libthreema-macros"
version = "0.1.0"
authors = ["Threema GmbH"]
license = "AGPL-3.0-only"
edition = "2024"

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
convert_case = "0.8"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
trybuild = "1"
