[package]
name = "threema-desktop-helper"
version = "1.0.0"
authors = ["Gian-Reto Tarnutzer <gian.reto.tarnutzer@threema.ch>"]
edition = "2021"
homepage = "https://threema.ch/"
keywords = ["threema", "desktop", "helper"]
publish = false

[dependencies]
common = { path = "../common" }
const_format = "0.2.34"
futures = "0.3.31"
libc = "0.2.170"
tokio = { version = "1.43.0", features = ["macros", "net", "rt-multi-thread"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.0"
objc2-core-foundation = "0.3.0"
objc2-foundation = "0.3.0"
objc2-security = "0.3.0"
embed_plist = "1.2.2"

[[bin]]
name = "ThreemaDesktopHelper"
path = "src/main.rs"

[profile.release]
overflow-checks = true
lto = true
strip = "debuginfo"

[features]
default = []
allow_path_override = []
