[package]
name = "threema-desktop-launcher"
version = "1.0.0"
authors = ["Danilo Bargen <danilo.bargen@threema.ch>"]
edition = "2021"
homepage = "https://threema.ch/"
keywords = ["threema", "desktop", "launcher"]
publish = false

[dependencies]
colored = "2.0.4"
common = { path = "../common" }
futures = "0.3.31"
home = "0.5.5"
sha2 = "0.10.8"
time = "0.3.30"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread", "time"] }

[dependencies.windows]
package = "windows"
version = "0.58.0"
features = [
  "ApplicationModel",
  "Management_Deployment",
  "Storage",
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_System_Recovery",
]

[target.'cfg(target_os = "macos")'.dependencies]
tokio = { version = "1.42.0", features = [ "net"] }
const_format = "0.2.34"
objc2 = "0.6.0"
objc2-core-foundation = "0.3.0"
objc2-foundation = "0.3.0"
objc2-security = "0.3.0"
objc2-service-management = "0.3.0"

[[bin]]
name = "ThreemaDesktopLauncher"
path = "src/main.rs"

[profile.release]
overflow-checks = true
lto = true
strip = "debuginfo"

[features]
default = []
allow_path_override = []
