[package]
name = "common"
version = "1.0.0"
authors = ["Gian-Reto Tarnutzer <gian.reto.tarnutzer@threema.ch>"]
edition = "2021"
homepage = "https://threema.ch/"
publish = false

[dependencies]
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["io-util"] }

[target.'cfg(target_os = "macos")'.dependencies]
tokio = { version = "1.43.0", features = ["net"] }
objc2 = "0.6.0"
objc2-core-foundation = "0.3.0"
objc2-foundation = "0.3.0"
